added favicon, korean am/pm, fixed seconds movement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bailey's Digital Clock</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body onload="initClock()">
@@ -21,13 +25,14 @@
     <div class="time">
       <div id="hour">00</div>:
       <div id="minutes">00</div>:
-      <div id="seconds">00</div>
-      <div id="period" class="seconds-display">AM</div>
+      <div id="seconds" class="seconds-display">00</div>
+      <div id="period" class="period-display">AM</div>
     </div>
   </div>
   
   
   <!-- digital clock end -->
   <script src="js/main.js"></script>
+  <!-- <a href="https://www.flaticon.com/free-icons/hour" title="hour icons">Hour icons created by Those Icons - Flaticon</a> -->
 </body>
 </html>
