added 년for year marker, added click/hover to light up too

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body onload="initClock()">
 
   <!-- digital clock start -->
+  <p class="txt-white txt-sm">click/hover to light up</p>
   <div class="datetime">
+    
     <div class="date">
      <span id="daynum">00 일</span>
       <span id="dayname">일</span>,
