added user select:none, moved name of day first, added 일to dnum and took out commas

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <div class="datetime">
     
     <div class="date">
-     <span id="daynum">00 일</span>
-      <span id="dayname">일</span>,
-      <span id="month">월</span>,
+      <span id="dayname">일</span>
+      <span id="daynum">00 일</span>      
+      <span id="month">월</span>
       <span id="year">년</span>
     </div>
     
